fix: remove overflowing of the module elements

--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -42,3 +42,7 @@ html {
 	scrollbar-width: none;
 	scroll-behavior: smooth;
 }
+
+main {
+	overflow: hidden;
+}
